<resources>
    <string name="app_name">LHCE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="webuntis">Stonnepläng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_text">Tél.</string>
    <string name="phone_number">55 71 55 335</string>
    <string name="fax_number_text">Fax</string>
    <string name="fax_number">57 24 04</string>
    <string name="LHCE_phone_number_text">LHCE Site Tél.</string>
    <string name="LHCE_phone_number">55 71 55 355</string>
    <string name="LHCE_fax_number_text">LHCE Site Fax</string>
    <string name="LHCE_fax_number">57 24 04</string>
    <string name="LHCE_address">LHCE Site Adresse</string>
    <string name="LHCE_street_number">2, rue Général Patton</string>
    <string name="LHCE_zip_code_location">L-4277 Esch-sur-Alzette</string>
    <string name="VH_phone_number_text">Victor Hugo Tél.</string>
    <string name="VH_phone_number">55 71 55</string>
    <string name="VH_address">Victor Hugo Adresse</string>
    <string name="VH_street_number">91, rue Victor Hugo</string>
    <string name="VH_zip_code_location">L-4141 Esch-sur-Alzette</string>
    <string name="developer_label">Developer</string>
    <string name="app_autor">Colin Ries / Patrick Schroeder</string>
    <string name="development_assistance">Development Assistance</string>
    <string name="development_assistance_name">Patrick Schroeder</string>
    <string name="secretariat_email">secretariat@lhce.lu</string>
    <string name="secretariat_email_label">Email</string>
    <string name="contact">Kontakt</string>
    <string name="app_banner">The official app</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="date">Build Date</string>
    <string name="copyright">Copyright</string>
    <string name="credits_copyright">©2016 LHCEApp</string>
    <string name="about">Iwwer</string>
    <string name="more">Méi</string>
    <string name="homepageURL">LHCE.lu</string>
    <string name="restopolisURL">Restopolis.lu</string>
    <string name="changes">Ännerungen</string>
    <string name="lhcenews">News</string>
    <string name="schoulvakanzen">Schoulvakanzen</string>
    <string name="Vakanz1">Ouschtervakanz</string>
    <string name="Vakanz2">Summervakanz</string>
    <string name="Vakanz3">Päischtvakanz</string>
    <string name="Vakanz4">Chrëschtvakanz</string>
    <string name="Vakanz5">Allerhellegevakanz</string>
    <string name="Vakanz6">Fuesvakanz</string>
    <string name="Vakanz7">1 Mai</string>
    <string name="Vakanz8">Christi Himmelfahrt</string>
    <string name="Vakanz9">Nationalfeierdag</string>
    <string name="V1C">26. März 2016 - 10. April 2016</string>
    <string name="V2C">16. Juli 2016 - 14. September 2016</string>
    <string name="V3C">14. Mai 2016 - 22. Mai 2016</string>
    <string name="V4C">19. Dezember 2015 - 3. Januar 2016</string>
    <string name="V5C">31. Oktober 2015 - 8. November 2015</string>
    <string name="V6C">6. Februar 2016 -  14. Februar 2016</string>
    <string name="V7C">1 Mai 2016</string>
    <string name="V8C">5. Mai 2016</string>
    <string name="V9C">23. Juni 2016</string>


</resources>
